<resources>
    <string name="app_name">MindMate</string>
    <string name="mindmate">MindMate</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="getting_started">Getting started</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="textview">TextView</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="enter_your_email">Enter your mail</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up!</string>
    <string name="forget_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in!</string>
    <string name="welcome_onboard">Welcome onboard!</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_date_of_birth">Enter your date of birth</string>
    <string name="registered_successfully">You were registered!</string>
    <string name="error_msg_mail">The mail is empty!</string>
    <string name="error_msg_name">The name is empty!</string>
    <string name="error_msg_name_has_numbers">The name must not have numbers!</string>
    <string name="error_msg_password">The password is empty!</string>
    <string name="error_msg_confirm_password">Confirm your password!</string>
    <string name="error_msg_not_the_same_password">Passwords are not the same!</string>
    <string name="error_msg_password_not_strong">The password is too weak! Must have minimum of 8 characters, including an uppercase letter, a lowercase letter, a number and a special character.</string>
    <string name="login_success">You logged in successfully!</string>
    <string name="admin_gmail_com">admin@gmail.com</string>
    <string name="p_assw0rd">P@ssw0rd</string>
    <string name="you_ve_been_using_mindmate_for_x_days_in_a_row">You\'ve been using MindMate for %d days in a row!</string>
    <string name="you_ve_been_using_mindmate_for_1_day">You\'ve been using MindMate for %d day!</string>
    <string name="hello_xyz">Hello XYZ!</string>
    <string name="daily_checklist">Daily checklist</string>
    <string name="cognitive_games">Cognitive games</string>
    <string name="medical_survey">Medical survey</string>
    <string name="your_pharmacy">Your pharmacy</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="select_a_game">Select a game!</string>
    <string name="craft_a_rhyme">Craft a rhyme!</string>
    <string name="guess_a_word">Guess a word!</string>
    <string name="with_each_guess_feel_the_adrenaline_rush_as_you_inch_closer_to_uncovering_the_mystery_word_from_common_phrases_to_obscure_terms_every_round_promises_a_new_and_exhilarating_challenge_test_your_deductive_skills_expand_your_vocabulary_and_revel_in_the_thrill_of_triumph_with_every_correct_guess">With each guess, feel the adrenaline rush as you inch closer to uncovering the mystery word. From common phrases to obscure terms, every round promises a new and exhilarating challenge. Test your deductive skills, expand your vocabulary, and revel in the thrill of triumph with every correct guess.</string>
    <string name="start_new_game">Start new game</string>
    <string name="a">A</string>
    <string name="try_again">Try again!</string>
    <string name="correct">Correct!</string>
    <string name="type_in_your_word">Type in your word</string>
    <string name="last_try">Last try!</string>
    <string name="what_activity_would_you_like_to_add">What activity would you like to add?</string>
    <string name="your_activity">Your activity</string>
    <string name="add_an_activity">Add an activity</string>
    <string name="phone_number">Phone number</string>
    <string name="alert_your_caregiver">Alert your caregiver!</string>
    <string name="submit">Submit</string>
    <string name="agree_with_terms_amp_conditions"><![CDATA[Agree with <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Terms and Conditions</a>.]]></string>
</resources>