<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".CraftRhymeActivity">

    <ImageView
        android:id="@+id/blue_rect"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:importantForAccessibility="no"
        android:src="@drawable/bg_blue_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image_bars"
        android:layout_width="31dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        app:layout_constraintBottom_toTopOf="@+id/blue_rect"
        app:layout_constraintEnd_toStartOf="@+id/mind_mate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_bars_solid" />

    <TextView
        android:id="@+id/mind_mate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jaldi_bold"
        android:gravity="center"
        android:text="@string/mindmate"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/blue_rect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/blue_rect" />

    <ImageView
        android:id="@+id/alarm"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:importantForAccessibility="no"
        android:src="@drawable/bg_red_dot"
        app:layout_constraintBottom_toBottomOf="@+id/blue_rect"
        app:layout_constraintEnd_toEndOf="@+id/blue_rect"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/title_craft_rhyme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jaldi_bold"
        android:text="@string/craft_a_rhyme"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blue_rect"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/number_of_tries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="1 | 10"
        android:textColor="@color/textViewColor"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/given_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blue_rect"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/guessed_correctly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jaldi_bold"
        android:text="@string/correct"
        android:textColor="@color/snackBarSuccess"
        android:textSize="48sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blue_rect"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/guessed_incorrectly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jaldi_bold"
        android:text="@string/try_again"
        android:textColor="@color/snackBarFailure"
        android:textSize="48sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blue_rect"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/given_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="432dp"
        android:fontFamily="@font/jaldi_bold"
        android:gravity="center"
        android:text="DESIGN"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_craft_rhyme"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/user_word"
        android:layout_width="294dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:background="@drawable/bg_rounded_corner_100"
        android:ems="10"
        android:fontFamily="@font/jaldi_bold"
        android:hint="@string/type_in_your_word"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/textViewColor"
        android:textColorHint="@color/editTextColor"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/given_word"
        app:layout_constraintVertical_bias="0.129" />

    <ImageView
        android:id="@+id/submit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/user_word"
        app:layout_constraintEnd_toEndOf="@+id/user_word"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/user_word"
        app:layout_constraintTop_toTopOf="@+id/user_word"
        app:layout_constraintVertical_bias="0.523"
        app:srcCompat="@drawable/ic_arrow_right_solid" />

    <ImageView
        android:id="@+id/restart_game"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/user_word"
        app:layout_constraintEnd_toEndOf="@+id/user_word"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="@+id/user_word"
        app:layout_constraintTop_toTopOf="@+id/user_word"
        app:layout_constraintVertical_bias="0.533"
        app:srcCompat="@drawable/ic_arrows_rotate_solid" />

    <TextView
        android:id="@+id/bottom_text_view"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:layout_marginBottom="148dp"
        android:gravity="center"
        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_word"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>